--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@
     </style>
 </head>
 <body>
-<div id="bg">
+<div id="bg" >
+    <img>
     <div id="main">
         <div class="search">
             <form action="https://www.baidu.com/s?wd=" target="_blank">
@@ -158,9 +159,9 @@
 <script src="public/static/jquery.min.js"></script>
 <script>
     $(function () {
-        $.get('api.php/?getImgRandom', function (v) {
+        $.get('api.php/?ac=getImg&type=json', function (v) {
             var data = v.result, imgurl = '';
-            if (data == undefined) {
+            if (data === undefined) {
                 imgurl = 'url(public/static/default.jpg)';
             } else {
                 if (!data.savepath) {
@@ -178,35 +179,7 @@
             imgurl = 'url(public/static/default.jpg)';
             $("#bg").css('background-image', imgurl)
         });
+        
     });
-</script>
-<script>
-    //这段js要放在页面最下方
-    // var h = window.innerHeight,w=window.innerWidth;
-    // window.oncontextmenu=function(){return false;};
-    // window.onkeydown = window.onkeyup = window.onkeypress = function () {
-    //     window.event.returnValue = false;
-    //     return false;
-    // };
-    // //如果用户在工具栏调起开发者工具，那么判断浏览器的可视高度和可视宽度是否有改变，如有改变则关闭本页面
-    // window.onresize = function () {
-    //     if (h != window.innerHeight||w!=window.innerWidth){
-    //         window.close();
-    //         window.location = "about:blank";
-    //     }
-    // }
-    /*好吧，你的开发者工具是单独的窗口显示，不会改变原来网页的高度和宽度，
-    但是你只要修改页面元素我就重新加载一次数据,让你无法修改页面元素（不支持IE9以下浏览器）*/
-    // if(window.addEventListener){
-    //     window.addEventListener("DOMCharacterDataModified", function(){window.location.reload();}, true);
-    //     window.addEventListener("DOMAttributeNameChanged", function(){window.location.reload();}, true);
-    //     window.addEventListener("DOMCharacterDataModified", function(){window.location.reload();}, true);
-    //     window.addEventListener("DOMElementNameChanged", function(){window.location.reload();}, true);
-    //     window.addEventListener("DOMNodeInserted", function(){window.location.reload();}, true);
-    //     window.addEventListener("DOMNodeInsertedIntoDocument", function(){window.location.reload();}, true);
-    //     window.addEventListener("DOMNodeRemoved", function(){window.location.reload();}, true);
-    //     window.addEventListener("DOMNodeRemovedFromDocument", function(){window.location.reload();}, true);
-    //     window.addEventListener("DOMSubtreeModified", function(){window.location.reload();}, true);
-    // }
 </script>
 </html>
